# Dataset-Attribution

./: README.md  pyproject.toml  pytest.ini
Notebooks/: LORA-Training.ipynb  Post-Hoc-attribution.ipynb
Notebooks /: notebook.md
configs/: attribution.yaml  attribution_logix.yaml  data.yaml  data_3000_template.yaml  train_lora.dev.yaml  train_lora.final.yaml  train_lora.yaml
configs/profiles/: colab_a100.yaml  colab_lr_sweep_stable.yaml  colab_train_lora.yaml
data/raw/: alpaca_data.json
docs/: final_run_checklist.md
outputs/runs/default_run/splits/: shadow.csv  test.csv  train.csv
scripts/: final_run_check.py  preflight_data_paths.py  run_lora.sh  run_step1_final_check.sh  run_step2_logix.sh  validate_train_outputs.py  verify_reproducibility.sh
src/: __init__.py
src/attribution/: __init__.py  gradient_logger.py  influence.py  input_resolver.py  logix_engine.py
src/data/: __init__.py  datasets.py  normalize.py  split.py
src/evaluation/: __init__.py  metrics.py
src/privacy/: __init__.py  audit.py
src/training/: __init__.py  data_loader.py  final_run_check.py  lora_train.py  validate_outputs.py
tests/: test_attribution_input_resolver.py  test_data_loader.py  test_data_split.py  test_final_run_check.py  test_gradient_logger.py  test_logix_engine.py  test_logix_smoke_011.py  test_lora_train.py  test_normalize.py  test_placeholder.py  test_validate_outputs.py
