[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-attribution"
version = "0.1.0"
description = "Dataset attribution for LoRA fine-tuned LLMs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.46,<4.49",
  "peft",
  "accelerate>=1.0,<1.3",
  "datasets",
  "torch",
  "pyyaml>=6.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
